web/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campaigner-web
spec:
  rules:
    - host: campaigner.aiweon.co.il
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campaigner-web
                port: { name: http }
